--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <div class="header">funko</div>
-    <div class="links-bar">link1 link2 link3 link4</div>
+    <div class="links-bar">
+      <a href="link 1">link 1 </a><a href="link 2">link 2 </a
+      ><a href="link 3">link 3 </a><a href="link 4">link 4 </a>
+    </div>
     <div class="category">
       <div>
-        category menu
+        <h1>category menu</h1>
         <ul>
           <li><a href="category1">category 1</a></li>
           <li><a href="category2">category 2</a></li>
@@ -23,36 +26,63 @@
       </div>
       <div class="banner1">
         <h1>banner subfocus</h1>
-        <h2>headding name</h2>
-        <div>
+        <h2>heading name</h2>
+        <div class="button">
           <button class="banner-button"><a href=""> more info</a></button>
         </div>
       </div>
       <div class="banner2">
         <h1>banner subfocus</h1>
-        <h2>headding name</h2>
+        <h2>heading name</h2>
         <button class="banner-button"><a href=""> more info</a></button>
       </div>
     </div>
     <div class="best-seller">
-      <div>best selling products</div>
-      <div>product 1</div>
-      <div>product 2</div>
-      <div>product 3</div>
+      <div>
+      <h1>best selling product</h1>
+      <ul>
+        <li><a href="product1">product 1</a></li>
+        <li><a href="product2">product 2</a></li>
+        <li><a href="product3">product 3</a></li>
+        <li><a href="product4">product 4</a></li>
+        <li><a href="product5">product 5</a></li>
+        <button class="more-products">
+          <a href="more-products">more products</a>
+        </button>
+      </ul>
+    </div>
+      <div class="product-example">
+        <div>
+          <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+        </div>
+        <h1>product title</h1>
+        <p>small desciption</p>
+        <h2>price$$$</h2>
+        <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+        <button class="buy-now">buy now</button>
+      </div>
+      <div class="product-example">
+        <div class="product-image">
+          <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+        </div>
+        <h1>product title</h1>
+        <p>small desciption</p>
+        <h2>price$$$</h2>
+        <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+        <button class="buy-now">buy now</button>
+      </div>
+  <div class="product-example">
+    <div>
+      <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+    </div>
+    <h1>product title</h1>
+    <p>small desciption</p>
+    <h2>price$$$</h2>
+    <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+    <button class="buy-now">buy now</button>
+  </div>
+</div>
+  </div>
     </div>
     <div class="quotes"></div>
-    <div class="products">
-      <div>product 1</div>
-      <div>product 2</div>
-      <div>product 3</div>
-      <div>product 4</div>
-    </div>
-    <div class="footer">
-      <div>get in touch</div>
-      <div>connection</div>
-      <div>earnings</div>
-      <div>account</div>
-    </div>
-    <div class="producttaggs">product tags</div>
-  </body>
-</html>
+ 
