--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="header">funko</div>
@@ -39,50 +40,80 @@
     </div>
     <div class="best-seller">
       <div>
-      <h1>best selling product</h1>
-      <ul>
-        <li><a href="product1">product 1</a></li>
-        <li><a href="product2">product 2</a></li>
-        <li><a href="product3">product 3</a></li>
-        <li><a href="product4">product 4</a></li>
-        <li><a href="product5">product 5</a></li>
-        <button class="more-products">
-          <a href="more-products">more products</a>
-        </button>
-      </ul>
-    </div>
+        <h1>best selling product</h1>
+        <ul>
+          <li><a href="product1">product 1</a></li>
+          <li><a href="product2">product 2</a></li>
+          <li><a href="product3">product 3</a></li>
+          <li><a href="product4">product 4</a></li>
+          <li><a href="product5">product 5</a></li>
+          <button class="more-products">
+            <a href="more-products">more products</a>
+          </button>
+        </ul>
+      </div>
       <div class="product-example">
         <div>
-          <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+          <img
+            src="/pictures/demo.jpg"
+            alt="demo picture"
+            width="238"
+            height="180"
+          />
         </div>
         <h1>product title</h1>
         <p>small desciption</p>
         <h2>price$$$</h2>
-        <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+        <h3><span STYLE="text-decoration:line-through">price slashed</span></h3>
         <button class="buy-now">buy now</button>
       </div>
       <div class="product-example">
         <div class="product-image">
-          <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+          <img
+            src="/pictures/demo.jpg"
+            alt="demo picture"
+            width="238"
+            height="180"
+          />
         </div>
         <h1>product title</h1>
         <p>small desciption</p>
         <h2>price$$$</h2>
-        <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+        <h3><span STYLE="text-decoration:line-through">price slashed</span></h3>
         <button class="buy-now">buy now</button>
       </div>
-  <div class="product-example">
-    <div>
-      <img src="/pictures/demo.jpg" alt="demo picture" width="238" height="180" />
+      <div class="product-example">
+        <div>
+          <img
+            src="/pictures/demo.jpg"
+            alt="demo picture"
+            width="238"
+            height="180"
+          />
+        </div>
+        <h1>product title</h1>
+        <p>small desciption</p>
+        <h2>price$$$</h2>
+        <h3><span STYLE="text-decoration:line-through">price slashed</span></h3>
+        <button class="buy-now">buy now</button>
+      </div>
     </div>
-    <h1>product title</h1>
-    <p>small desciption</p>
-    <h2>price$$$</h2>
-    <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-    <button class="buy-now">buy now</button>
-  </div>
-</div>
-  </div>
-    </div>
-    <div class="quotes"></div>
- 
+    <section>
+      <div class="carousel" data-carousel>
+        <button class="carousel-button prev" data-carousel-button="prev">
+          &#8656;
+        </button>
+        <button class="carousel-button next" data-carousel-button="next">
+          &#8658;
+        </button>
+        <ul data-slides>
+          <li class="slide" data-active>
+            <div class="slides-item slide-1">random review 1</div>
+          </li>
+          <li class="slide">
+            <div class="slides-item slide-2">random review 2</div>
+          </li>
+          <li class="slide">
+            <div class="slides-item slide-3">random review 3</div>
+  </body>
+</html>
