--- a/funko.html
+++ b/funko.html
@@ -5,49 +5,204 @@
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
+<div class="product-page">
+  <div class="sidebar">
+    <div class="Categories">
+      <h1>Categories</h1>
+      <p>category name <a href="320">320</a></p>
+      <p>category name </p><a href="320">320</a>
+      <p>category name </p><a href="320">320</a>
+      <p>category name </p><a href="320">320</a>
+    </div>
+    <div class="Brands">
+      <h1>Brands</h1>
+      <div><input type="checkbox">filter by brand item </div> 
+      <div><input type="checkbox">filter by brand item </div> 
+      <div><input type="checkbox">filter by brand item </div> 
+      <div><input type="checkbox">filter by brand item </div> 
+      <div><input type="checkbox">filter by brand item </div> 
+    </div>
+    <div class="Rating">Rating
+     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9733;&#9734;</div>
+     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9734;&#9734;</div>
+     <div><input type="checkbox">&#9733;&#9733;&#9734;&#9734;&#9734;</div>
+     <div><input type="checkbox">&#9733;&#9734;&#9734;&#9734;&#9734;</div>
+    </div>
+   <div class="Price">Price
+        <div class="slider">
+          <div class="progress"></div>
+          <div class="range-input">
+            <input type="range" class="range-min" min="0" max="99999" value="00000">
+            <input type="range" class="range-min" min="0" max="99999" value="99999">
+          </div>
+          <div class="price-input">
+          <div class="field">
+            <span>Min</span>
+            <input type="number" class="input-min" value="00000">
+          </div>
+          <div class="separator">-</div>
+          <div class="field">
+            <span>Max</span>
+            <input type="number" class="input-max" value="99999">
+          </div>
+        </div>
+          <button>Apply</button>
+          <button>Reset</button>
+        </div>
+    </div>
+  </div>
+  <div class="products">
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+    <div class="product-example">
+      <div>
+        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      </div>
+      <h1>product title</h1>
+      <p>small desciption</p>
+      <h2>price$$$</h2>
+      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
+      <button class="buy-now">buy now</button>
+    </div>
+  
+  </div>
+</div>
+   <div class="navigation">
+    <div>
+      Page: <a href="1">1</a>
+      <a href="2">2</a>
+      <a href="3">3</a>
+      <a href="4">4</a>
+    </div>
+    <div><button>Show more products <i class="fa-solid fa-chevron-down"></i>></i></button></div>
+    <div><a href="100">100</a> Products</div>
+  </div>
     <div class="info">
       <div>
         <h1>Get in touch</h1>
         <ul>
           <li><a href="About us">About us</a></li>
-          <li>Careers</li>
-          <li>Press Releases</li>
-          <li>Blog</li>
+          <li><a href="Careers">Careers</a></li>
+          <li><a href="Press Releases">Press Releases</a></li>
+          <li><a href="Blog">Blog</a></li>
         </ul>
       </div>
 
       <div>
         <h1>Conenction</h1>
         <ul>
-          <li>Facebook</li>
-          <li>Twitter</li>
-          <li>instagram</li>
-          <li>Youtube</li>
-          <li>LinkedIn</li>
+          <li><a href="Facebook">Facebook</a></li>
+          <li><a href="Twitter">Twitter</a></li>
+          <li><a href="Instagram">Instagram</a></li>
+          <li><a href="Youtube">Youtube</a></li>
+          <li><a href="LinkedIn">LinkedIn</a></li>
         </ul>
       </div>
 
       <div>
-        <h1> Earnings</h1>
-       
+        <h1>Earnings</h1>
+
         <ul>
-          <li>Become an Affiliate</li>
-          <li>Advertise your product</li>
-          <li>Sell on Market</li>
+          <li><a href="Become an Affiliate">Become an Affiliate</a></li>
+          <li><a href="Advertise your product">Advertise your product</a></li>
+          <li><a href="Sell on Market">Sell on Market</a></li>
         </ul>
       </div>
       <div>
         <h1>Account</h1>
         <ul>
-          <li>Your account</li>
-          <li>Returns Centre</li>
-          <li>100% purchase protection</li>
-          <li>Chat with us</li>
-          <li>Help</li>
+          <li><a href="Your account">Your account</a></li>
+          <li><a href="Returns Centre">Returns Centre</a></li>
+          <li>
+            <a href="100% purchase protection">100% purchase protection</a>
+          </li>
+          <li><a href="Chat with us">Chat with us</a></li>
+          <li><a href="Help">Help</a></li>
         </ul>
       </div>
     </div>
-    <div>Product tags</div>
+    <div>
+      <h1>Product tags</h1>
+    </div>
     <button>Beans</button>
     <button>Carrots</button>
     <button>Apples</button>
