new carousel and added another section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           <span STYLE="text-decoration:line-through">$200</span>
         </div>
         <div class="buy-now"><button class="buybutton">buy now</button></div>
-      </div>    <div class="product">
+      </div>
+      <div class="product">
         <div class="picture">
           <img
             src="/pictures/demo.jpg"
@@ -84,7 +85,8 @@
           <span STYLE="text-decoration:line-through">$200</span>
         </div>
         <div class="buy-now"><button class="buybutton">buy now</button></div>
-      </div>    <div class="product">
+      </div>
+      <div class="product">
         <div class="picture">
           <img
             src="/pictures/demo.jpg"
@@ -102,26 +104,105 @@
         <div class="buy-now"><button class="buybutton">buy now</button></div>
       </div>
     </div>
-    <section>
-      <div class="carousel" data-carousel>
-        <button class="carousel-button prev" data-carousel-button="prev">
-          &#8656;
-        </button>
-        <button class="carousel-button next" data-carousel-button="next">
-          &#8658;
-        </button>
-        <ul data-slides>
-          <li class="slide" data-active>
-            <div class="slides-item slide-1">random review 1</div>
-          </li>
-          <li class="slide">
-            <div class="slides-item slide-2">random review 2</div>
-          </li>
-          <li class="slide">
-            <div class="slides-item slide-3">random review 3</div>
-          </li>
-        </ul>
+    <div class="reviews">
+      <div class="title">Our customers says</div>
+      <div class="more-review-button">
+        <button class="more-button">more&#62;</button>
       </div>
-    </section>
+      <div class="carousel">
+        <div class="container">
+          <div class="slide active">Slide 1</div>
+          <div class="slide">Slide 2</div>
+          <div class="slide">Slide 3</div>
+          <div class="slide">Slide 4</div>
+          <div class="slide">Slide 5</div>
+          <div class="slide">Slide 6</div>
+          <div class="slide">Slide 7</div>
+          <div class="slide">Slide 8</div>
+          <div class="slide">Slide 9</div>
+          <div class="slide">Slide 10</div>
+        </div>
+        <div class="controls">
+          <button class="prev">&#x3c;</button>
+          <button class="next">&#62;</button>
+        </div>
+      </div>
+    </div>
+    <div class="products-section">
+      <div class="products-header">section header</div>
+      <div class="more-products-button">
+        <button class="more-button">more&#62;</button>
+      </div>
+      <div class="product-line">
+        <div class="product">
+          <div class="picture">
+            <img
+              src="/pictures/demo.jpg"
+              alt="demo picture"
+              width="238"
+              height="180"
+            />
+          </div>
+          <div class="product-name">product title</div>
+          <div class="product-description">small desciption</div>
+          <div class="price">$100</div>
+          <div class="old-price">
+            <span STYLE="text-decoration:line-through">$200</span>
+          </div>
+          <div class="buy-now"><button class="buybutton">buy now</button></div>
+        </div>
+        <div class="product">
+          <div class="picture">
+            <img
+              src="/pictures/demo.jpg"
+              alt="demo picture"
+              width="238"
+              height="180"
+            />
+          </div>
+          <div class="product-name">product title</div>
+          <div class="product-description">small desciption</div>
+          <div class="price">$100</div>
+          <div class="old-price">
+            <span STYLE="text-decoration:line-through">$200</span>
+          </div>
+          <div class="buy-now"><button class="buybutton">buy now</button></div>
+        </div>
+        <div class="product">
+          <div class="picture">
+            <img
+              src="/pictures/demo.jpg"
+              alt="demo picture"
+              width="238"
+              height="180"
+            />
+          </div>
+          <div class="product-name">product title</div>
+          <div class="product-description">small desciption</div>
+          <div class="price">$100</div>
+          <div class="old-price">
+            <span STYLE="text-decoration:line-through">$200</span>
+          </div>
+          <div class="buy-now"><button class="buybutton">buy now</button></div>
+        </div>
+        <div class="product">
+          <div class="picture">
+            <img
+              src="/pictures/demo.jpg"
+              alt="demo picture"
+              width="238"
+              height="180"
+            />
+          </div>
+          <div class="product-name">product title</div>
+          <div class="product-description">small desciption</div>
+          <div class="price">$100</div>
+          <div class="old-price">
+            <span STYLE="text-decoration:line-through">$200</span>
+          </div>
+          <div class="buy-now"><button class="buybutton">buy now</button></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
