--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       ><a href="link 3">link 3 </a><a href="link 4">link 4 </a>
     </div>
     <div class="category">
-      <div>
-        <h1>category menu</h1>
+      <div class="category-sidebar">
+       <h1>category menu</h1>
         <ul>
           <li><a href="category1">category 1</a></li>
           <li><a href="category2">category 2</a></li>
           <li><a href="category3">category 3</a></li>
           <li><a href="category4">category 4</a></li>
           <li><a href="category5">category 5</a></li>
-          <button class="more"><a href="more">more categories</a></button>
         </ul>
+        <div> <button class="category-button"><a href="more">more categories</a></button></div>
       </div>
       <div class="banner1">
         <h1>banner subfocus</h1>
@@ -39,14 +39,14 @@
       </div>
     </div>
     <div class="best-seller">
-      <div>
+      <div class="best-seller-sidebar">
         <h1>best selling product</h1>
-        <ul>
+        <div class="links-list"><ul>
           <li><a href="product1">product 1</a></li>
           <li><a href="product2">product 2</a></li>
           <li><a href="product3">product 3</a></li>
           <li><a href="product4">product 4</a></li>
-          <li><a href="product5">product 5</a></li>
+          <li><a href="product5">product 5</a></li></div>
           <button class="more-products">
             <a href="more-products">more products</a>
           </button>
@@ -111,16 +111,46 @@
       </div>
       <div class="carousel">
         <div class="container">
-          <div class="slide active">Slide 1</div>
-          <div class="slide">Slide 2</div>
-          <div class="slide">Slide 3</div>
-          <div class="slide">Slide 4</div>
-          <div class="slide">Slide 5</div>
-          <div class="slide">Slide 6</div>
-          <div class="slide">Slide 7</div>
-          <div class="slide">Slide 8</div>
-          <div class="slide">Slide 9</div>
-          <div class="slide">Slide 10</div>
+          <div class="slide active">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
+          <div class="slide">
+            <div class="quote">"this is a quote from john doe"</div>
+            <div class="reviewers-name">John Doe</div>
+          </div>
         </div>
         <div class="controls">
           <button class="prev">&#x3c;</button>
