--- a/funko.html
+++ b/funko.html
@@ -5,6 +5,26 @@
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
+    <div class="body">
+    <div class="header">
+      <div class="web-name">funkoweb</div>
+      <div class="cart-icon">basket</div>
+      <div class="nav-bar">
+        <div class="link1">link1</div>
+        <div class="link2">link2</div>
+        <div class="link3">link3</div>
+        <div class="link4">link4</div>
+      </div>
+    </div>
+    <div class="page-header">
+      <div class="directory">Homepage:</div>
+      <div class="page-name">demon slayer</div>
+      <div class="product-amount">15431</div>
+      <div class="product-contained">Products</div>
+      <div class="Applied-filters">Applied filter:</div>
+      <div class="selected-filters"><button>selected filters</button>
+        </div>
+    </div>
 <div class="product-page">
   <div class="sidebar">
     <div class="Categories">
@@ -22,14 +42,16 @@
       <div><input type="checkbox">filter by brand item </div> 
       <div><input type="checkbox">filter by brand item </div> 
     </div>
-    <div class="Rating">Rating
-     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9733;&#9734;</div>
-     <div><input type="checkbox">&#9733;&#9733;&#9733;&#9734;&#9734;</div>
-     <div><input type="checkbox">&#9733;&#9733;&#9734;&#9734;&#9734;</div>
-     <div><input type="checkbox">&#9733;&#9734;&#9734;&#9734;&#9734;</div>
+    <div class="Rating">
+      <h1>Rating</h1>
+     <div><input type="checkbox">	&#11088;&#11088;&#11088;&#11088;&#11088;</div>
+     <div><input type="checkbox">&#11088;&#11088;&#11088;&#11088;&#9734;</div>
+     <div><input type="checkbox">&#11088;&#11088;&#11088;&#9734;&#9734;</div>
+     <div><input type="checkbox">&#11088;&#11088;&#9734;&#9734;&#9734;</div>
+     <div><input type="checkbox">&#11088;&#9734;&#9734;&#9734;&#9734;</div>
     </div>
-   <div class="Price">Price
+   <div class="Price">
+    <h1>Price</h1>
         <div class="slider">
           <div class="progress"></div>
           <div class="range-input">
@@ -53,96 +75,160 @@
     </div>
   </div>
   <div class="products">
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
-    </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
     </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
-    </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
     </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
-    </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
     </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
-    </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
     </div>
-    <div class="product-example">
-      <div>
-        <img src="imgs/demo.jpg" alt="demo picture" width="238" height="180" />
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
       </div>
-      <h1>product title</h1>
-      <p>small desciption</p>
-      <h2>price$$$</h2>
-      <h3><SPAN STYLE="text-decoration:line-through">price slashed</SPAN></h3>
-      <button class="buy-now">buy now</button>
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
+      </div>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
     </div>
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
+      </div>
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
+      </div>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
+    </div>
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
+      </div>
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
+      </div>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
+    </div>
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
+      </div>
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
+      </div>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
+    </div>
+    <div class="product">
+      <div class="picture">
+        <img
+          src="/pictures/demo.jpg"
+          alt="demo picture"
+          width="238"
+          height="180"
+        />
+      </div>
+      <div class="product-name">product title</div>
+      <div class="product-description">small desciption</div>
+      <div class="price">$100</div>
+      <div class="old-price">
+        <span STYLE="text-decoration:line-through">$200</span>
+      </div>
+      <div class="buy-now"><button class="buybutton">buy now</button></div>
+    </div>
+
   
   </div>
 </div>
@@ -153,7 +239,7 @@
       <a href="3">3</a>
       <a href="4">4</a>
     </div>
-    <div><button>Show more products <i class="fa-solid fa-chevron-down"></i>></i></button></div>
+    <div><button>Show more products <i class="fa-solid fa-chevron-down"></i></i></button></div>
     <div><a href="100">100</a> Products</div>
   </div>
     <div class="info">
@@ -201,26 +287,21 @@
       </div>
     </div>
     <div>
-      <h1>Product tags</h1>
-    </div>
-    <button>Beans</button>
-    <button>Carrots</button>
-    <button>Apples</button>
-    <button>Garlic</button>
-    <button>Mushrooms</button>
-    <button>Tomatoes</button>
-    <button>Chili peppers</button>
-    <button>Broccoli</button>
-    <button>Watermelons</button>
-    <button>Oranges</button>
-    <button>Bananas</button>
-    <button>Grapes</button>
-    <button>Cherries</button>
-    <button>Meat</button>
-    <button>Seo tag</button>
-    <button>Fish</button>
-    <button>Fresh food</button>
-    <button>Lemons</button>
+      <div class="product-tags">Product tags:</div>
+    <button> <a href="Pokemon"></a>Pokemon</button>
+    <button> <a href="Anime"></a>Anime</button>
+    <button><a href="DC"></a>DC</button>
+    <button><a href="Marvel"></a>Marvel</button>
+    <button><a href="Disney"></a>Disney</button>
+    <button><a href="DS"></a>Demon Slayer</button>
+    <button><a href="MHC"></a>My Hero Academy</button>
+    <button><a href="Horror"></a>Horror</button>
+    <button><a href="The Office"></a>The Office</button>
+    <button><a href="Dnd"></a>DnD</button>
+    <button><a href="Princes"></a>Princess</button>
+    <button><a href="South Park"></a>South Park</button>
     <p>Copyright&copy; 2020 petrbilek.com</p>
+    </div>
+  </div>
   </body>
 </html>
