--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="header">funko</div>
-    <div class="links-bar">
-      <a href="link 1">link 1 </a><a href="link 2">link 2 </a
-      ><a href="link 3">link 3 </a><a href="link 4">link 4 </a>
+  <div class="entirepage">
+    <div class="header">
+      <div class="web-name">funkoweb</div>
+      <div class="cart-icon">basket</div>
+      <div class="nav-bar">
+        <div class="link1">link1</div>
+        <div class="link2">link2</div>
+        <div class="link3">link3</div>
+        <div class="link4">link4</div>
+      </div>
     </div>
     <div class="category">
       <div class="category-sidebar">
@@ -234,5 +240,66 @@
         </div>
       </div>
     </div>
+  </div>
+ </div>
+   <div class="info">
+     <div>
+       <h1>Get in touch</h1>
+       <ul>
+         <li><a href="About us">About us</a></li>
+         <li><a href="Careers">Careers</a></li>
+         <li><a href="Press Releases">Press Releases</a></li>
+         <li><a href="Blog">Blog</a></li>
+       </ul>
+     </div>
+     <div>
+       <h1>Conenction</h1>
+       <ul>
+         <li><a href="Facebook">Facebook</a></li>
+         <li><a href="Twitter">Twitter</a></li>
+         <li><a href="Instagram">Instagram</a></li>
+         <li><a href="Youtube">Youtube</a></li>
+         <li><a href="LinkedIn">LinkedIn</a></li>
+       </ul>
+     </div>
+
+     <div>
+       <h1>Earnings</h1>
+
+       <ul>
+         <li><a href="Become an Affiliate">Become an Affiliate</a></li>
+         <li><a href="Advertise your product">Advertise your product</a></li>
+         <li><a href="Sell on Market">Sell on Market</a></li>
+       </ul>
+     </div>
+     <div>
+       <h1>Account</h1>
+       <ul>
+         <li><a href="Your account">Your account</a></li>
+         <li><a href="Returns Centre">Returns Centre</a></li>
+         <li>
+           <a href="100% purchase protection">100% purchase protection</a>
+         </li>
+         <li><a href="Chat with us">Chat with us</a></li>
+         <li><a href="Help">Help</a></li>
+       </ul>
+     </div>
+      <div class="product-tags">Product tags:</div>
+      <div class="button-tags">
+    <button> <a href="Pokemon"></a>Pokemon</button>
+    <button> <a href="Anime"></a>Anime</button>
+    <button><a href="DC"></a>DC</button>
+    <button><a href="Marvel"></a>Marvel</button>
+    <button><a href="Disney"></a>Disney</button>
+    <button><a href="DS"></a>Demon Slayer</button>
+    <button><a href="MHC"></a>My Hero Academy</button>
+    <button><a href="Horror"></a>Horror</button>
+    <button><a href="The Office"></a>The Office</button>
+    <button><a href="Dnd"></a>DnD</button>
+    <button><a href="Princes"></a>Princess</button>
+    <button><a href="South Park"></a>South Park</button></div>
+ </div>
+ <p>Copyright&copy; 2020 PeaTea</p></div>
+</div>
   </body>
 </html>
