--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="header">
       <div class="web-name">funkoweb</div>
       <div class="cart-icon">basket</div>
-      <div class="nav-bar">
-        <div class="link1">link1</div>
-        <div class="link2">link2</div>
-        <div class="link3">link3</div>
-        <div class="link4">link4</div>
-      </div>
+    </div>
+    <div class="nav-bar">
+      <div class="link"><a href="link1">link1</a></div>
+      <div class="link"><a href="link2">link2</a></div>
+      <div class="link"><a href="link3">link3</a></div>
+      <div class="link"><a href="link4">link4</a></div>
     </div>
     <div class="category">
       <div class="category-sidebar">
@@ -165,10 +165,11 @@
       </div>
     </div>
     <div class="products-section">
-      <div class="products-header">section header</div>
-      <div class="more-products-button">
-        <button class="more-button">more&#62;</button>
-      </div>
+      <div class="products-header">   
+        <div class="products-title">section header</div>
+        <div class="more-products-button"><button class="more-button">more&#62;</button>
+      </div></div>
+   
       <div class="product-line">
         <div class="product">
           <div class="picture">
@@ -242,64 +243,72 @@
     </div>
   </div>
  </div>
-   <div class="info">
-     <div>
-       <h1>Get in touch</h1>
-       <ul>
-         <li><a href="About us">About us</a></li>
-         <li><a href="Careers">Careers</a></li>
-         <li><a href="Press Releases">Press Releases</a></li>
-         <li><a href="Blog">Blog</a></li>
-       </ul>
-     </div>
-     <div>
-       <h1>Conenction</h1>
-       <ul>
-         <li><a href="Facebook">Facebook</a></li>
-         <li><a href="Twitter">Twitter</a></li>
-         <li><a href="Instagram">Instagram</a></li>
-         <li><a href="Youtube">Youtube</a></li>
-         <li><a href="LinkedIn">LinkedIn</a></li>
-       </ul>
-     </div>
-
-     <div>
-       <h1>Earnings</h1>
-
-       <ul>
-         <li><a href="Become an Affiliate">Become an Affiliate</a></li>
-         <li><a href="Advertise your product">Advertise your product</a></li>
-         <li><a href="Sell on Market">Sell on Market</a></li>
-       </ul>
-     </div>
-     <div>
-       <h1>Account</h1>
-       <ul>
-         <li><a href="Your account">Your account</a></li>
-         <li><a href="Returns Centre">Returns Centre</a></li>
-         <li>
-           <a href="100% purchase protection">100% purchase protection</a>
-         </li>
-         <li><a href="Chat with us">Chat with us</a></li>
-         <li><a href="Help">Help</a></li>
-       </ul>
-     </div>
-      <div class="product-tags">Product tags:</div>
-      <div class="button-tags">
-        <button> <a href="Pokemon"></a>Pokemon</button>
-        <button> <a href="Anime"></a>Anime</button>
-        <button><a href="DC"></a>DC</button>
-        <button><a href="Marvel"></a>Marvel</button>
-        <button><a href="Disney"></a>Disney</button>
-        <button><a href="DS"></a>Demon Slayer</button>
-        <button><a href="MHC"></a>My Hero Academy</button>
-        <button><a href="Horror"></a>Horror</button>
-        <button><a href="The Office"></a>The Office</button>
-        <button><a href="Dnd"></a>DnD</button>
-        <button><a href="Princes"></a>Princess</button>
-        <button><a href="South Park"></a>South Park</button></div>
- </div>
- <p>Copyright&copy; 2020 PeaTea</p></div>
+ <div class="footer">
+  <div class="get-in-touch">
+    <div class="footer-title">Get in touch</div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="About us">About us</a></li>
+        <li><a href="Careers">Careers</a></li>
+        <li><a href="Press Releases">Press Releases</a></li>
+        <li><a href="Blog">Blog</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="connections">
+    <div class="footer-title">Connections</div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="Facebook">Facebook</a></li>
+        <li><a href="Twitter">Twitter</a></li>
+        <li><a href="Instagram">Instagram</a></li>
+        <li><a href="Youtube">Youtube</a></li>
+        <li><a href="LinkedIn">LinkedIn</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="earnings">
+    <div class="footer-title">Earnings</div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="Become an Affiliate">Become an Affiliate</a></li>
+        <li>
+          <a href="Advertise your product">Advertise your product</a>
+        </li>
+        <li><a href="Sell on Market">Sell on Market</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="account">
+    <div class="footer-title">Account</div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="Your account">Your account</a></li>
+        <li><a href="Returns Centre">Returns Centre</a></li>
+        <li>
+          <a href="100% purchase protection">100% purchase protection</a>
+        </li>
+        <li><a href="Chat with us">Chat with us</a></li>
+        <li><a href="Help">Help</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-tags">Product tags:</div>
+  <div class="button-tags">
+    <button><a href="Pokemon">Pokemon</a></button>
+    <button><a href="Anime">Anime</a></button>
+    <button><a href="DC">DC</a></button>
+    <button><a href="Marvel">Marvel</a></button>
+    <button><a href="Disney">Disney</a></button>
+    <button><a href="DS">Demon Slayer</a></button>
+    <button><a href="MHC">My Hero Academy</a></button>
+    <button><a href="Horror">Horror</a></button>
+    <button><a href="The Office">The Office</a></button>
+    <button><a href="Dnd">DnD</a></button>
+    <button><a href="Princes">Princess</a></button>
+    <button><a href="South Park">South Park</a></button>
+  </div>
+  <div class="footer-copywrite">Copyright&copy; 2020 PeaTea</div>
 </div>
   </body>
 </html>
