update funko.html and css
responsive update

--- a/funko.html
+++ b/funko.html
@@ -6,25 +6,26 @@
   </head>
   <body>
     <div class="body">
-    <div class="header">
-      <div class="web-name">funkoweb</div>
-      <div class="cart-icon">basket</div>
-      <div class="nav-bar">
-        <div class="link1">link1</div>
-        <div class="link2">link2</div>
-        <div class="link3">link3</div>
-        <div class="link4">link4</div>
+      <div class="header">
+        <div class="web-name">funkoweb</div>
+        <div class="cart-icon">basket</div>
       </div>
-    </div>
+      <div class="nav-bar">
+        <div class="link"><a href="link1">link1</a></div>
+        <div class="link"><a href="link2">link2</a></div>
+        <div class="link"><a href="link3">link3</a></div>
+        <div class="link"><a href="link4">link4</a></div>
+      </div>
+   
     <div class="page-header">
       <div class="directory">Homepage:</div>
       <div class="page-name">demon slayer</div>
       <div class="product-amount">15431</div>
       <div class="product-contained">Products</div>
       <div class="Applied-filters">Applied filter:</div>
-      <div class="selected-filters"><button>selected filters</button>
-        </div>
+      <div class="selected-filters"><button>selected filters</button></div>
     </div>
+    
 <div class="product-page">
   <div class="sidebar">
     <div class="Categories">
@@ -74,7 +75,7 @@
         </div>
     </div>
   </div>
-  <div class="products">
+  <div class="productcontainer">
     <div class="product">
       <div class="picture">
         <img
@@ -242,9 +243,10 @@
     <div><button>Show more products <i class="fa-solid fa-chevron-down"></i></i></button></div>
     <div><a href="100">100</a> Products</div>
   </div>
-    <div class="info">
-      <div>
-        <h1>Get in touch</h1>
+  <div class="footer">
+    <div class="get-in-touch">
+      <div class="footer-title">Get in touch</div>
+      <div class="footer-links">
         <ul>
           <li><a href="About us">About us</a></li>
           <li><a href="Careers">Careers</a></li>
@@ -252,9 +254,10 @@
           <li><a href="Blog">Blog</a></li>
         </ul>
       </div>
-
-      <div>
-        <h1>Conenction</h1>
+    </div>
+    <div class="connections">
+      <div class="footer-title">Connections</div>
+      <div class="footer-links">
         <ul>
           <li><a href="Facebook">Facebook</a></li>
           <li><a href="Twitter">Twitter</a></li>
@@ -263,18 +266,22 @@
           <li><a href="LinkedIn">LinkedIn</a></li>
         </ul>
       </div>
-
-      <div>
-        <h1>Earnings</h1>
-
+    </div>
+    <div class="earnings">
+      <div class="footer-title">Earnings</div>
+      <div class="footer-links">
         <ul>
           <li><a href="Become an Affiliate">Become an Affiliate</a></li>
-          <li><a href="Advertise your product">Advertise your product</a></li>
+          <li>
+            <a href="Advertise your product">Advertise your product</a>
+          </li>
           <li><a href="Sell on Market">Sell on Market</a></li>
         </ul>
       </div>
-      <div>
-        <h1>Account</h1>
+    </div>
+    <div class="account">
+      <div class="footer-title">Account</div>
+      <div class="footer-links">
         <ul>
           <li><a href="Your account">Your account</a></li>
           <li><a href="Returns Centre">Returns Centre</a></li>
@@ -286,22 +293,24 @@
         </ul>
       </div>
     </div>
-    <div>
-      <div class="product-tags">Product tags:</div>
-    <button> <a href="Pokemon"></a>Pokemon</button>
-    <button> <a href="Anime"></a>Anime</button>
-    <button><a href="DC"></a>DC</button>
-    <button><a href="Marvel"></a>Marvel</button>
-    <button><a href="Disney"></a>Disney</button>
-    <button><a href="DS"></a>Demon Slayer</button>
-    <button><a href="MHC"></a>My Hero Academy</button>
-    <button><a href="Horror"></a>Horror</button>
-    <button><a href="The Office"></a>The Office</button>
-    <button><a href="Dnd"></a>DnD</button>
-    <button><a href="Princes"></a>Princess</button>
-    <button><a href="South Park"></a>South Park</button>
-    <p>Copyright&copy; 2020 petrbilek.com</p>
+    <div class="footer-tags">Product tags:</div>
+    <div class="button-tags">
+      <button><a href="Pokemon">Pokemon</a></button>
+      <button><a href="Anime">Anime</a></button>
+      <button><a href="DC">DC</a></button>
+      <button><a href="Marvel">Marvel</a></button>
+      <button><a href="Disney">Disney</a></button>
+      <button><a href="DS">Demon Slayer</a></button>
+      <button><a href="MHC">My Hero Academy</a></button>
+      <button><a href="Horror">Horror</a></button>
+      <button><a href="The Office">The Office</a></button>
+      <button><a href="Dnd">DnD</a></button>
+      <button><a href="Princes">Princess</a></button>
+      <button><a href="South Park">South Park</a></button>
     </div>
-  </div>
+    <div class="footer-copywrite">Copyright&copy; 2020 PeaTea</div>
+    </div>
+  </div> 
+</div>
   </body>
 </html>
